--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
                   <button type="button" class="bpm-arrow" id="bpmDown" tabindex="0" aria-label="Decrement BPM">&#9660;</button>
                 </div>
               </div>
-              <!-- Brush mute checkbox, checked by default, no text, larger style -->
               <div class="brush-toggle">
                 <input type="checkbox" id="brushToggle" checked title="Toggle Brush Sound" aria-label="Toggle Brush Sound" />
               </div>
@@ -41,10 +40,8 @@
           </div>
         </div>
       </div>
-      <!-- rest of the slot boxes ... -->
       <div class="box-space">
         <div class="slot-box" id="slot0">
-          <!-- ... unchanged ... -->
           <div class="note-rects"></div>
           <img class="dash-img-slot" src="https://raw.githubusercontent.com/VisualMusicalMinds/Musical-Images/1100d582ac41ba2d0b1794da6dd96026a3869249/Cartoon%20RhythmBox5.svg" alt="Rhythm Box Rest" />
           <select class="chord-select">
@@ -62,10 +59,65 @@
           </select>
         </div>
       </div>
-      <!-- ... slot1, slot2, slot3 ... -->
+      <div class="box-space">
+        <div class="slot-box" id="slot1">
+          <div class="note-rects"></div>
+          <img class="dash-img-slot" src="https://raw.githubusercontent.com/VisualMusicalMinds/Musical-Images/1100d582ac41ba2d0b1794da6dd96026a3869249/Cartoon%20RhythmBox5.svg" alt="Rhythm Box Rest" />
+          <select class="chord-select">
+            <option value="">-</option>
+            <option value="empty"></option>
+            <option value="C">C / I</option>
+            <option value="Dm">Dm / ii</option>
+            <option value="Em">Em / iii</option>
+            <option value="F">F / IV</option>
+            <option value="G">G / V</option>
+            <option value="Am">Am / vi</option>
+            <option value="D">D / VV</option>
+            <option value="E">E / Vvi</option>
+            <option value="Bb">Bb / 44</option>
+          </select>
+        </div>
+      </div>
+      <div class="box-space">
+        <div class="slot-box" id="slot2">
+          <div class="note-rects"></div>
+          <img class="dash-img-slot" src="https://raw.githubusercontent.com/VisualMusicalMinds/Musical-Images/1100d582ac41ba2d0b1794da6dd96026a3869249/Cartoon%20RhythmBox5.svg" alt="Rhythm Box Rest" />
+          <select class="chord-select">
+            <option value="">-</option>
+            <option value="empty"></option>
+            <option value="C">C / I</option>
+            <option value="Dm">Dm / ii</option>
+            <option value="Em">Em / iii</option>
+            <option value="F">F / IV</option>
+            <option value="G">G / V</option>
+            <option value="Am">Am / vi</option>
+            <option value="D">D / VV</option>
+            <option value="E">E / Vvi</option>
+            <option value="Bb">Bb / 44</option>
+          </select>
+        </div>
+      </div>
+      <div class="box-space">
+        <div class="slot-box" id="slot3">
+          <div class="note-rects"></div>
+          <img class="dash-img-slot" src="https://raw.githubusercontent.com/VisualMusicalMinds/Musical-Images/1100d582ac41ba2d0b1794da6dd96026a3869249/Cartoon%20RhythmBox5.svg" alt="Rhythm Box Rest" />
+          <select class="chord-select">
+            <option value="">-</option>
+            <option value="empty"></option>
+            <option value="C">C / I</option>
+            <option value="Dm">Dm / ii</option>
+            <option value="Em">Em / iii</option>
+            <option value="F">F / IV</option>
+            <option value="G">G / V</option>
+            <option value="Am">Am / vi</option>
+            <option value="D">D / VV</option>
+            <option value="E">E / Vvi</option>
+            <option value="Bb">Bb / 44</option>
+          </select>
+        </div>
+      </div>
     </div>
     <div class="bottom-grid-container" id="bottom-grid-container">
-      <!-- ... unchanged ... -->
       <div class="bottom-grid" id="bottom-grid">
         <div class="play-btn-cell">
           <button id="playPauseBtn" class="circle-play-btn" title="Play" aria-label="Play/Pause" tabindex="0">
@@ -78,7 +130,34 @@
             </svg>
           </button>
         </div>
-        <!-- ... rest of bottom grid ... -->
+        <div class="bottom-picture" id="bottomPic0" style="grid-row:1; grid-column:2;">
+          <img class="bottom-picture-img" src="https://raw.githubusercontent.com/VisualMusicalMinds/Musical-Images/48e79626ae5b3638784c98a6f73ec0e342cf9894/Cartoon%20RhythmBox1.svg" alt="Rhythm Box" />
+        </div>
+        <div class="bottom-picture" id="bottomPic1" style="grid-row:1; grid-column:3;">
+          <img class="bottom-picture-img" src="https://raw.githubusercontent.com/VisualMusicalMinds/Musical-Images/48e79626ae5b3638784c98a6f73ec0e342cf9894/Cartoon%20RhythmBox1.svg" alt="Rhythm Box" />
+        </div>
+        <div class="bottom-picture" id="bottomPic2" style="grid-row:1; grid-column:4;">
+          <img class="bottom-picture-img" src="https://raw.githubusercontent.com/VisualMusicalMinds/Musical-Images/48e79626ae5b3638784c98a6f73ec0e342cf9894/Cartoon%20RhythmBox1.svg" alt="Rhythm Box" />
+        </div>
+        <div class="bottom-picture" id="bottomPic3" style="grid-row:1; grid-column:5;">
+          <img class="bottom-picture-img" src="https://raw.githubusercontent.com/VisualMusicalMinds/Musical-Images/48e79626ae5b3638784c98a6f73ec0e342cf9894/Cartoon%20RhythmBox1.svg" alt="Rhythm Box" />
+        </div>
+        <div class="rhythm-box-pair" style="grid-row:2; grid-column:2;">
+          <div class="bottom-rhythm-box" data-pair="0" data-which="0"><span class="bottom-rhythm-box-text">1</span></div>
+          <div class="bottom-rhythm-box" data-pair="0" data-which="1"><span class="bottom-rhythm-box-text">&amp;</span></div>
+        </div>
+        <div class="rhythm-box-pair" style="grid-row:2; grid-column:3;">
+          <div class="bottom-rhythm-box" data-pair="1" data-which="0"><span class="bottom-rhythm-box-text">2</span></div>
+          <div class="bottom-rhythm-box" data-pair="1" data-which="1"><span class="bottom-rhythm-box-text">&amp;</span></div>
+        </div>
+        <div class="rhythm-box-pair" style="grid-row:2; grid-column:4;">
+          <div class="bottom-rhythm-box" data-pair="2" data-which="0"><span class="bottom-rhythm-box-text">3</span></div>
+          <div class="bottom-rhythm-box" data-pair="2" data-which="1"><span class="bottom-rhythm-box-text">&amp;</span></div>
+        </div>
+        <div class="rhythm-box-pair" style="grid-row:2; grid-column:5;">
+          <div class="bottom-rhythm-box" data-pair="3" data-which="0"><span class="bottom-rhythm-box-text">4</span></div>
+          <div class="bottom-rhythm-box" data-pair="3" data-which="1"><span class="bottom-rhythm-box-text">&amp;</span></div>
+        </div>
       </div>
     </div>
   </div>
