--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Chord Progression Grid - Rhythm and Sound</title>
+  <title>Chord Charting: Advanced</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -57,6 +57,7 @@
             <option value="E">E / Vvi</option>
             <option value="Bb">Bb / 44</option>
           </select>
+          <button class="second-btn" type="button" tabindex="0" title="Add 2nd" aria-label="Toggle 2nd chord">&#50;</button>
           <button class="seventh-btn" type="button" tabindex="0" title="Add 7th" aria-label="Toggle 7th chord">&#55;</button>
         </div>
       </div>
@@ -77,6 +78,7 @@
             <option value="E">E / Vvi</option>
             <option value="Bb">Bb / 44</option>
           </select>
+          <button class="second-btn" type="button" tabindex="0" title="Add 2nd" aria-label="Toggle 2nd chord">&#50;</button>
           <button class="seventh-btn" type="button" tabindex="0" title="Add 7th" aria-label="Toggle 7th chord">&#55;</button>
         </div>
       </div>
@@ -97,6 +99,7 @@
             <option value="E">E / Vvi</option>
             <option value="Bb">Bb / 44</option>
           </select>
+          <button class="second-btn" type="button" tabindex="0" title="Add 2nd" aria-label="Toggle 2nd chord">&#50;</button>
           <button class="seventh-btn" type="button" tabindex="0" title="Add 7th" aria-label="Toggle 7th chord">&#55;</button>
         </div>
       </div>
@@ -117,6 +120,7 @@
             <option value="E">E / Vvi</option>
             <option value="Bb">Bb / 44</option>
           </select>
+          <button class="second-btn" type="button" tabindex="0" title="Add 2nd" aria-label="Toggle 2nd chord">&#50;</button>
           <button class="seventh-btn" type="button" tabindex="0" title="Add 7th" aria-label="Toggle 7th chord">&#55;</button>
         </div>
       </div>
