--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="box-space">
         <div class="slot-box" id="slot0">
           <div class="note-rects"></div>
-          <img class="dash-img-slot" src="https://visualmusicalminds.github.io/images/CartoonRhythmBox5.svg" alt="Rhythm Box Rest" />
+          <img class="dash-img-slot" src="https://eagleviewmusic.com/images/CartoonRhythmBox5.svg" alt="Rhythm Box Rest" />
           <select class="chord-select">
             <option value="">-</option>
             <option value="empty"></option>
@@ -64,7 +64,7 @@
       <div class="box-space">
         <div class="slot-box" id="slot1">
           <div class="note-rects"></div>
-          <img class="dash-img-slot" src="https://visualmusicalminds.github.io/images/CartoonRhythmBox5.svg" alt="Rhythm Box Rest" />
+          <img class="dash-img-slot" src="https://eagleviewmusic.com/images/CartoonRhythmBox5.svg" alt="Rhythm Box Rest" />
           <select class="chord-select">
             <option value="">-</option>
             <option value="empty"></option>
@@ -85,7 +85,7 @@
       <div class="box-space">
         <div class="slot-box" id="slot2">
           <div class="note-rects"></div>
-          <img class="dash-img-slot" src="https://visualmusicalminds.github.io/images/CartoonRhythmBox5.svg" alt="Rhythm Box Rest" />
+          <img class="dash-img-slot" src="https://eagleviewmusic.com/images/CartoonRhythmBox5.svg" alt="Rhythm Box Rest" />
           <select class="chord-select">
             <option value="">-</option>
             <option value="empty"></option>
@@ -106,7 +106,7 @@
       <div class="box-space">
         <div class="slot-box" id="slot3">
           <div class="note-rects"></div>
-          <img class="dash-img-slot" src="https://visualmusicalminds.github.io/images/CartoonRhythmBox5.svg" alt="Rhythm Box Rest" />
+          <img class="dash-img-slot" src="https://eagleviewmusic.com/images/CartoonRhythmBox5.svg" alt="Rhythm Box Rest" />
           <select class="chord-select">
             <option value="">-</option>
             <option value="empty"></option>
@@ -139,16 +139,16 @@
           </button>
         </div>
         <div class="bottom-picture" id="bottomPic0" style="grid-row:1; grid-column:2;">
-          <img class="bottom-picture-img" src="https://visualmusicalminds.github.io/images/CartoonRhythmBox1.svg" alt="Rhythm Box" />
+          <img class="bottom-picture-img" src="https://eagleviewmusic.com/images/CartoonRhythmBox1.svg" alt="Rhythm Box" />
         </div>
         <div class="bottom-picture" id="bottomPic1" style="grid-row:1; grid-column:3;">
-          <img class="bottom-picture-img" src="https://visualmusicalminds.github.io/images/CartoonRhythmBox1.svg" alt="Rhythm Box" />
+          <img class="bottom-picture-img" src="https://eagleviewmusic.com/images/CartoonRhythmBox1.svg" alt="Rhythm Box" />
         </div>
         <div class="bottom-picture" id="bottomPic2" style="grid-row:1; grid-column:4;">
-          <img class="bottom-picture-img" src="https://visualmusicalminds.github.io/images/CartoonRhythmBox1.svg" alt="Rhythm Box" />
+          <img class="bottom-picture-img" src="https://eagleviewmusic.com/images/CartoonRhythmBox1.svg" alt="Rhythm Box" />
         </div>
         <div class="bottom-picture" id="bottomPic3" style="grid-row:1; grid-column:5;">
-          <img class="bottom-picture-img" src="https://visualmusicalminds.github.io/images/CartoonRhythmBox1.svg" alt="Rhythm Box" />
+          <img class="bottom-picture-img" src="https://eagleviewmusic.com/images/CartoonRhythmBox1.svg" alt="Rhythm Box" />
         </div>
         <div class="rhythm-box-pair" style="grid-row:2; grid-column:2;">
           <div class="bottom-rhythm-box" data-pair="0" data-which="0"><span class="bottom-rhythm-box-text">1</span></div>
