--- a/index.html
+++ b/index.html
@@ -212,6 +212,15 @@
         </div>
       </div>
     </div>
+
+    <div class="song-selector-container">
+      <label for="song-select" class="song-select-label">Load Song:</label>
+      <select id="song-select" name="song-select" class="song-select-dropdown">
+        <option value="">-- Select a Song --</option>
+        <option value="eagle-view-song">The Eagle View Song</option>
+      </select>
+    </div>
+
   </div>
   <script src="script.js"></script>
 </body>
